edit information of muhammad

--- a/Bale-Bot-Workshop-Slides/index.html
+++ b/Bale-Bot-Workshop-Slides/index.html
@@ -30,7 +30,7 @@
 				<section>
 					<h2>Bale Bot Development Workshop</h2>
 					<p>
-						<small>By: <a href="http://github.com/mmdaz">Muhamad Azhdari</a><br> As a bot development member of Bale</small>
+						<small>By: <a href="http://github.com/mmdaz">Muhamad Azhdari</a><br> Python developer at Bale.</small>
 					</p>
 				</section>
 
